# gpui-tcpchat

./: Cargo.toml  README.md
client-lib/: Cargo.toml
client-lib/src/: lib.rs
server/: Cargo.toml
server/src/: chat.rs  lib.rs  main.rs  messages.rs
ui/: Cargo.toml
ui/src/: chat_message.rs  input.rs  list.rs  main.rs  message.rs  view.rs
