[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "sync"] }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true }
serde_json = { workspace = true }
