[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
client-lib = { path = "../client-lib" }
server = { path = "../server" }
uuid = { workspace = true }
gpui = { git = "https://github.com/zed-industries/zed" }
unicode-segmentation = "1.12.0"
